--- a/config/locales/translation_ja.yml
+++ b/config/locales/translation_ja.yml
@@ -9,3 +9,7 @@ ja:
         memo: メモ  #g
         picture: 画像  #g
         title: 題名  #g
+      user:
+        name: 名前
+        adress: 住所
+        introduction: 自己紹介
