[update] 郵便番号追加

--- a/config/locales/translation_ja.yml
+++ b/config/locales/translation_ja.yml
@@ -10,5 +10,6 @@ ja:
         title: 題名  #g
       user:
         name: 名前
+        postal_code: 郵便番号
         adress: 住所
         introduction: 自己紹介
