[update] ユーザー詳細画面にフォロー数、フォロワー数、フォローボタン作成

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -238,3 +238,7 @@ ja:
     registrations:
       edit:
         title: "アカウント編集"
+  users:
+    show:
+      follower_count: フォロワー数
+      followed_count: フォロー数
