[update] ja.ymlファイルにfollows.ja.ymlの内容をマージ

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -239,6 +239,10 @@ ja:
       edit:
         title: "アカウント編集"
   users:
+    follows:
+      title: フォロー中
+    followers:
+      title: フォロワー
     show:
       follower_count: フォロワー数
       followed_count: フォロー数
