--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -246,6 +246,7 @@ ja:
       notice_update: "%{name}が更新されました。"
       notice_destroy: "%{name}が削除されました。"
       alert_create: "%{name}の作成に失敗しました。"
+      alert_edit: "他人の日報/コメントを編集、削除することはできません。"
   relationships:
     create:
       notice: "フォローしました。"
