--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -247,6 +247,7 @@ ja:
       notice_destroy: "%{name}が削除されました。"
       alert_create: "%{name}の作成に失敗しました。"
       alert_edit: "他人の日報/コメントを編集、削除することはできません。"
+      alert_update: "%{name}が更新に失敗しました。"
   relationships:
     create:
       notice: "フォローしました。"
